# chapter-llama

./: .gitignore  LICENSE  README.md  demo.py  download_model.py  env_setup.sh  inference.py  pyproject.toml  requirements.txt  test.py  train.py  train.sh
configs/: test.yaml  train.yaml
configs/data/: asr.yaml  captions.yaml  captions_asr.yaml  captions_asr_window.yaml  frames.yaml  frames_asr.yaml  frames_captions_asr.yaml
configs/experiment/: vision.yaml  vision_zero-shot.yaml
configs/hydra/: default.yaml
configs/local/: example.yaml
configs/logger/: wandb.yaml
configs/model/: gemini.yaml  llama3.1_8B.yaml  llama3.1_8B_vision.yaml  llama3.2_1B.yaml  llama3.2_3B.yaml  openai.yaml  zero-shot.yaml
configs/model/vision/: siglip-random_mm.yaml  siglip.yaml  siglip2.yaml  siglip2_cls.yaml  siglip_cls.yaml
configs/paths/: default.yaml
configs/test/: default.yaml  vision.yaml  window.yaml
dataset/docs/subset_data/: sml3mins_train.json
dataset/docs/subset_data/asrs/: asrs_sml3mins_train.json
dataset/docs/subset_data/chapters/: chapters_sml3mins_train.json
src/data/: chapters.py  prompt.py  single_video.py  utils_asr.py  utils_captions.py  utils_captions_asr.py  utils_frames.py  utils_frames_asr.py  utils_frames_captions_asr.py  utils_window.py  vidchapters.py  vidchapters_vision.py
src/models/: gemini_inference.py  llama_finetune.py  llama_finetune_vision.py  llama_finetune_vision_train.py  llama_inference.py  llama_inference_vision.py  llama_mapping.py  openai_inference.py  utils_tokenizer.py
src/test/: utils_chapters.py  vidchapters.py  vidchapters_vision.py  vidchapters_window.py
src/utils/: __init__.py  logging_utils.py  metrics.py  pylogger.py  rich_utils.py  utils.py
tools/captions/: caption_frames.py  caption_frames_timestamp.py  caption_selection.ipynb  caption_selection.py  find_missing_captions.ipynb  how_to_extract_captions.md  minicpm.py  minicpm_batch.py  requirements_captioner.txt  run_captions.sh  utils.py
tools/download/: captions.sh  docs.sh  models.py  videos.py
tools/extract/: asr_faster_whisper.py  asr_whisperx.py  mantis_embs.py  run_siglip.sh  siglip_embs.py  siglip_embs_cls.py
tools/results/: evaluate_results.ipynb  evaluate_results.py  metrics.py  metrics_caption.py  metrics_distance.py  metrics_overlap.py  metrics_soda.py  utils.py  utils_plot.py  utils_print.py
tools/shot_detection/: run_shot_detection.sh  shot_detection.py
tools/slurm/: run_test.sh  run_train.sh
